# cppdiff

./: .gitignore  CMakeLists.txt  README.md
all/: CMakeLists.txt
fixtures/: file.txt  modified_file.txt
include/: checksum.h  constants.h  data_source.h  delta_builder.h  patch.h  serde_t.h  signature_builder.h  utils.h
proto/: CMakeLists.txt  delta.proto  signature.proto
source/: checksum.cpp  data_source.cpp  delta_builder.cpp  patch.cpp  signature_builder.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: delta_builder.cpp  patch.cpp  signature_builder.cpp
